<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.profile.EditProfileFragment">

    <ImageButton
        android:id="@+id/btn_close_edit"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close_profile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile"
        android:textColor="#A0C878"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_close_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_close_edit" />

    <!-- Foto Profil -->
    <FrameLayout
        android:id="@+id/frame_edit_avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_edit_profile">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_edit_profile_picture"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_profile"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView" />

        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_add_profile" />
    </FrameLayout>

    <!-- Form Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_username"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:hint="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frame_edit_avatar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="@+id/til_edit_username"
        app:layout_constraintStart_toStartOf="@+id/til_edit_username"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_edit_city"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/city"
        app:layout_constraintEnd_toEndOf="@+id/til_edit_email"
        app:layout_constraintStart_toStartOf="@+id/til_edit_email"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_edit_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Tombol Update -->
    <Button
        android:id="@+id/btn_update_profile"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="#A0C878"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/update"
        android:textSize="18sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="@+id/til_edit_city"
        app:layout_constraintStart_toStartOf="@+id/til_edit_city"
        app:layout_constraintTop_toBottomOf="@+id/til_edit_city" />

</androidx.constraintlayout.widget.ConstraintLayout>
