<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    tools:context=".ui.profile.ProfileFragment">

    <!-- Judul Halaman -->
    <TextView
        android:id="@+id/tv_title_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/profile"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- BARU: Tombol Logout -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#A0C878"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_title_profile" />

    <!-- Kartu Info Pengguna -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_user_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:cardBackgroundColor="@android:color/white"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_profile">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearance.App.CircleImageView"
                tools:src="@drawable/ic_profile" />


            <TextView
                android:id="@+id/tv_profile_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="#40744D"
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_profile"
                app:layout_constraintStart_toEndOf="@+id/iv_profile_picture"
                app:layout_constraintTop_toTopOf="@+id/iv_profile_picture"
                tools:text="Username" />

            <TextView
                android:id="@+id/tv_profile_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile_picture"
                app:layout_constraintEnd_toStartOf="@+id/btn_edit_profile"
                app:layout_constraintStart_toStartOf="@+id/tv_profile_username"
                tools:text="\@email" />

            <ImageButton
                android:id="@+id/btn_edit_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_edit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Bagian Lokasi (tanpa ikon) -->
    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_user_info"
        tools:text="San Francisco" />

    <!-- Header untuk daftar postingan (sekarang memanjang dan abu-abu) -->
    <TextView
        android:id="@+id/header_posted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F2F2F2"
        android:fontFamily="@font/poppins_bold"
        android:padding="8dp"
        android:text="@string/posted"
        android:textColor="#999999"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location" />

    <!-- Daftar Postingan Pengguna -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_user_posts"
        android:layout_marginTop="16dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:paddingBottom="88dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_posted"
        tools:listitem="@layout/item_forum_post" />

    <!-- Tombol untuk membuat postingan baru -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:backgroundTint="#40744D"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>